# RTC-CPP

./: CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: cmake.yml
src/: CMakeLists.txt  chapter10_blended_patterns.cpp  chapter10_checkers.cpp  chapter10_gradients.cpp  chapter10_nested_patterns.cpp  chapter10_object_space_stripes.cpp  chapter10_perturbed_patterns.cpp  chapter10_radial_gradients.cpp  chapter10_rings.cpp  chapter10_stripes.cpp  chapter10_tiled_floor.cpp  chapter2.cpp  chapter3.cpp  chapter4.cpp  chapter5.cpp  chapter6.cpp  chapter7.cpp  chapter8.cpp  chapter9.cpp  ray_tracer_challenge.cpp
src/lib/: CMakeLists.txt  dummy.cpp  materials.cpp  patterns.cpp  tuple.cpp
src/lib/include/ray_tracer_challenge/: camera.h  canvas.h  color.h  intersections.h  lights.h  materials.h  math.h  matrices.h  matrix.h  matrix_builder.h  patterns.h  perlin_noise.h  planes.h  ray.h  rays.h  shapes.h  spheres.h  transformations.h  tuple.h  tuples.h  world.h
test/: CMakeLists.txt  test_camera.cpp  test_canvas.cpp  test_color.cpp  test_intersections.cpp  test_lights.cpp  test_materials.cpp  test_matrices.cpp  test_matrix.cpp  test_matrix_builder.cpp  test_patterns.cpp  test_perlin_noise.cpp  test_planes.cpp  test_ray.cpp  test_rays.cpp  test_rtc.cpp  test_shapes.cpp  test_spheres.cpp  test_transformations.cpp  test_tuple.cpp  test_tuples.cpp  test_world.cpp
test/support/: support.h  tuples.h
